--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+numpy
 gym
 gym[accept-rom-license, atari]
 gym[atari]
 keras
-tensorflow
+tensorflow[and-cuda]
 opencv-python
+joblib
+matplotlib
+cuda-python
